# AIPortal

./: .gitignore  README.md  index.html  package-lock.json  package.json
backend/: .env  .env.example  README.md  backend-api-specification.md  main.py  pyproject.toml  requirements.txt
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: __init__.py
backend/app/api/: __init__.py  ai_tools.py  auth.py  chat.py  dashboard.py  files.py  search.py  settings.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: __init__.py  database.py
backend/app/models/: __init__.py  chat.py  dashboard.py  file.py  settings.py  tool.py  user.py
backend/app/schemas/: __init__.py
backend/data/: app.db
frontend/src/: App.vue
frontend/src/views/: AiAssistant.vue  HotTools.vue
src/: App.vue
src/assets/: base.css  main.css
src/components/: AppLayout.vue  PageHeader.vue
src/config/: links.js
src/services/: toolService.js
src/views/: AIProducts.vue  HomeView.vue  ModelLibrary.vue  Workflow.vue
页面参考/: aiqingan.html
